--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,1 +1,15 @@
 <h2>Messages Index</h2>
+
+<ul>
+  <% Message.all.each do |message| %>
+    <li>
+      <%= message.content %>
+      written by
+      <strong><%= message.author %></strong>
+
+      <%= link_to "Edit", edit_message_path(message) %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to "New Message", new_message_path %>
