--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,18 +1,3 @@
 <h2>Create New Message</h2>
 
-<%= form_for @message do |f| %>
-  <p>
-    <%= f.label :author %>
-    <%= f.text_field :author %>
-  </p>
-
-  <p>
-    <%= f.label :content %>
-    <br>
-    <%= f.text_area :content %>
-  </p>
-
-  <p>
-    <%= f.submit  %>
-  </p>
-<% end  %>
+<%= render 'form' %>
